[project]
name = "f1-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastf1>=3.8.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[project.scripts]
pitwall = "pitwall.main:app"

[tool.ruff]
line-length = 88
target-version = "py312"
src=["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "RUF",   # ruff-specific rules
    "ANN",   # type annotations
#    "D",     # docstring conventions
]
ignore = [
    "E501",  # line length (handled by formatter)
    "D203",  # use D211 (no blank line before class)
    "D213",  # use D212 (summary on first line)
]

[tool.ruff.lint.isort]
known-first-party = ["pitwall"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
extraPaths = ["src"]
