[project]
name = "f1-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "fastf1>=3.8.1",
    "httpx>=0.28.1",
    "polars>=1.39.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[project.scripts]
pitwall = "pitwall.main:app"

[tool.ruff]
line-length = 88
target-version = "py314"
src=["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "RUF",   # ruff-specific rules
    "ANN",   # type annotations
#    "D",     # docstring conventions
]
ignore = [
    "E501",  # line length (handled by formatter)
    "D203",  # use D211 (no blank line before class)
    "D213",  # use D212 (summary on first line)
    "F401",  # Covered by basedpyright
    "ANN401", # Covered by basedpyright
]

[tool.ruff.lint.isort]
known-first-party = ["pitwall"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
extraPaths = ["src"]
